[gd_scene load_steps=7 format=2]

[ext_resource path="res://res/fonts/Neufreit-ExtraBold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://src/UI/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[node name="HUD" type="MarginContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -138.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 118.0
custom_constants/separation = 20

[node name="Player1" type="MarginContainer" parent="ScoreContainer"]
margin_right = 482.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DataContainer" type="VBoxContainer" parent="ScoreContainer/Player1"]
margin_right = 482.0
margin_bottom = 98.0

[node name="Name" type="Label" parent="ScoreContainer/Player1/DataContainer"]
margin_right = 482.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "Player 1"
align = 2

[node name="Score" type="Label" parent="ScoreContainer/Player1/DataContainer"]
margin_top = 27.0
margin_right = 482.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2

[node name="Player2" type="MarginContainer" parent="ScoreContainer"]
margin_left = 502.0
margin_right = 984.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DataContainer" type="VBoxContainer" parent="ScoreContainer/Player2"]
margin_right = 482.0
margin_bottom = 98.0

[node name="Name" type="Label" parent="ScoreContainer/Player2/DataContainer"]
margin_right = 482.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 4 )
text = "Player 2"

[node name="Score" type="Label" parent="ScoreContainer/Player2/DataContainer"]
margin_top = 27.0
margin_right = 482.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 5 )
text = "0"
